blade中のスタイルをscssに切り出し、及びコンパイル

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,8 @@
-//
-html, body {
+html,
+body {
   background-color: white;
   color: #636b6f;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   font-weight: 200;
   height: 100vh;
   margin: 0;
@@ -13,9 +13,12 @@ html, body {
 }
 
 .flex-center {
-  align-items: center;
+  -webkit-box-align: center;
+          align-items: center;
+  display: -webkit-box;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+          justify-content: center;
 }
 
 .position-ref {
@@ -41,7 +44,7 @@ html, body {
   padding: 0 25px;
   font-size: 13px;
   font-weight: 600;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -49,3 +52,4 @@ html, body {
 .m-b-md {
   margin-bottom: 30px;
 }
+
