--- a/resources/sass/mixin/_favSetting.scss
+++ b/resources/sass/mixin/_favSetting.scss
@@ -12,3 +12,11 @@
   font-weight: $weight;
 }
 
+// 親要素にrelativeが指定されていた場合に中央寄せする
+@mixin absoluteCenter($top: 50%, $left: 50%) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
