Aタグデフォルトのスタイルを消すmixin

--- a/resources/sass/mixin/_fix.scss
+++ b/resources/sass/mixin/_fix.scss
@@ -12,3 +12,14 @@
   resize: none;
 }
 
+// AタグのデフォルトのCSSを打ち消す
+@mixin reset_a-tag($color: $white){
+  &:link{
+    color: $color;
+  }
+  &:visited{
+    color: $color;
+  }
+  text-decoration: none;
+}
+
