--- a/resources/sass/mixin/_fix.scss
+++ b/resources/sass/mixin/_fix.scss
@@ -23,3 +23,10 @@
   text-decoration: none;
 }
 
+//スクロールバーを非表示にする
+@mixin hiddenScrollBar{
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+}
