--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -7,44 +7,19 @@ html, body {
   margin: 0;
 }
 
-.full-height {
+.top{
+  margin-top: 20px;
   height: 100vh;
-}
-
-.flex-center {
-  align-items: center;
   display: flex;
-  justify-content: center;
-}
-
-.position-ref {
-  position: relative;
-}
-
-.top-right {
-  position: absolute;
-  right: 10px;
-  top: 18px;
-}
-
-.content {
-  text-align: center;
-}
-
-.title {
-  font-size: 84px;
-}
-
-.links > a {
-  color: #636b6f;
-  padding: 0 25px;
-  font-size: 13px;
-  font-weight: 600;
-  letter-spacing: .1rem;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.m-b-md {
-  margin-bottom: 30px;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  &__item{
+    @include reset_a-tag(gray);
+    width: 40%;
+    height: 40%;
+    line-height: 200px;
+    border: solid 2px gray;
+    text-align: center;
+    font-size: 50px;
+  }
 }
