githubのmarkdownCSSをインストール

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 //reset.cssやmixinを読み込む
 @import "config/reset";
+@import "config/github";
 @import "mixin/favSetting";
 @import "mixin/fix";
 @import "mixin/responsive";
