--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -21,5 +21,9 @@ html, body {
     border: solid 2px gray;
     text-align: center;
     font-size: 50px;
+    &:hover{
+      text-decoration: none;
+      box-shadow: 0 0 4px gray;
+    }
   }
 }
