--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -8,10 +8,10 @@ html, body {
 }
 
 .top{
-  margin-top: 20px;
   height: 100vh;
   display: flex;
   justify-content: space-around;
+  align-content: space-around;
   flex-flow: row wrap;
   &__item{
     @include reset_a-tag(gray);
